5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1822_3183.log
== TEST (2019-06-13 11:20:47) 
-- CODE:
from numpy import*
a = array(eval(input("ata:")))
i=0
for x in a:
	x[i-1]
	i=i-1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:22:19) 
-- CODE:
from numpy import*
a = array(eval(input("ata:")))
i=0
for x in a:
	x[i-1]
	i=i-1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:24:48) 
-- CODE:
from numpy import*
a = array(eval(input("ata:")))
i=0
b = size(a)
c = zeros(b,dtype=int)
for x in b:
	b[i]=x[i-1]
	i=i-1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:24:48) 
-- CODE:
from numpy import*
a = array(eval(input("ata:")))
i=0
b = size(a)
c = zeros(b,dtype=int)
for x in b:
	b[i]=x[i-1]
	i=i-1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:26:30) 
-- CODE:
from numpy import*
a = array(eval(input("ata:")))
i=0
b = size(a)
#c = zeros(b,dtype=int)
for x in b:
	b[i]=x[i-1]
	i=i-1
	
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:26:56) 
-- CODE:
from numpy import*
a = array(eval(input("ata:")))
i=0
b = size(a)
#c = zeros(b,dtype=int)
for x in size(a):
	b[i]=x[i-1]
	i=i-1
	
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:27:17) 
-- CODE:
from numpy import*
a = array(eval(input("ata:")))
i=0
b = size(a)
#c = zeros(b,dtype=int)
for x in size(a):
	b[i]=x[i-1]
	i=i-1
	
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:27:48) 
-- CODE:
from numpy import*
a = array(eval(input("ata:")))
i=0
b = size(a)
#c = zeros(b,dtype=int)
for x in range(size(a)):
	b[i]=x[i-1]
	i=i-1
	
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:43:31) 
-- CODE:
from numpy import*
a = array(eval(input("ata:")))
i=0
b = size(a)
#c = zeros(b,dtype=int)
#c[i]
for x in range(size(a)):
	
	#b[i]=x[i-1]
	#i=i-1
	
	
print(x)
-- EXECUTION TIME:
1.01636
-- ERROR:
  File "/home/codebench/codes/1822/3183/main.py", line 13
    print(x)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:50:20) 
-- CODE:
from numpy import*
a = array(eval(input("ata:")))
i=-1
d = 0
b = size(a)
c = zeros(b,dtype=int)

for x in a:
	x[i]= c[d]
	i=i-1
	d=d+1
print(c)	
	#b[i]=x[i-1]
	#i=i-1
	
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:50:52) 
-- CODE:
from numpy import*
a = array(eval(input("ata:")))
i=-1
d = 0
b = size(a)
c = zeros(b,dtype=int)

for x in a:
	x[i] == c[d]
	i=i-1
	d=d+1
print(c)	
	#b[i]=x[i-1]
	#i=i-1
	
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:51:41) 
-- CODE:
from numpy import*
a = array(eval(input("ata:")))
i=-1
d = 0
b = size(a)
c = zeros(b,dtype=int)

for x in a:
	x[i] = a[d]
	i=i-1
	d=d+1
print(x)	
	#b[i]=x[i-1]
	#i=i-1
	
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:53:46) 
-- CODE:
from numpy import*
a = array(eval(input("ata:")))
i=-1
d = 0
b = size(a)
c = zeros(b,dtype=int)

for x in a:
	c[d]=x[i]
	i=i-1
	d=d+1
print(x)	
	#b[i]=x[i-1]
	#i=i-
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
